--- a/ChiScore_Analysis.ipynb
+++ b/ChiScore_Analysis.ipynb
@@ -42,20 +42,22 @@
     {
       "cell_type": "code",
       "source": [
+        "from ipywidgets import widgets\n",
+        "\n",
         "#@title <b><font color='#00AAFF'>1 - Input Protein Sequence</font></b>\n",
         "\n",
         "#@markdown Name of the sequence to be analyzed:\n",
-        "NAME = \"SEQUENCE_NAME\" #@param {type:\"string\"}\n",
+        "NAME = \"CeOrc1-IDR\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown Input sequence as string of capitalized amino acid codes:\n",
-        "SEQUENCE = \"INPUT_SEQUENCE_HERE\" #@param {type:\"string\"}\n",
+        "SEQUENCE = \"MNTRKSETSKTVSATPVKRRSTRITNLPKSAPKIVKRSSVRLRGAPQCTYKSDSSSSSSSSDSDGEDEYAATKDELKAVDHDNQMEIDFSDEIGENFSEEDSCSDKENRRVTRSRTPTRLEETPSKRLARELSKASVSKVSTSKTLFKESKSPRKVEISRKTNKARVFQEEDDDDEDDFSDEIDEKFYSKTNKRTPITIKIPSKMITQKVTPLVISKTPGGTLRTRRRARQNSEELEDLVDPLDS\" #@param {type:\"string\"}\n",
         "\n",
-        "#@markdown Optional parameters:\n",
-        "Window_Sizes = [6, 8, 10, 12, 14, 16, 18, 20, 22] #@param {type:\"string\"}\n",
-        "#@markdown <i>Input as list of integers (even integers recommended)</i>\n",
-        "Min_ZScore = 1.96 #@param {type:\"string\"}\n",
-        "#@markdown <i>Input as float value; boundaries will be trimmed until all that remain have z-scores above this value.\n",
-        "\n"
+        "# Analysis parameters:\n",
+        "Window_Sizes = [6, 8, 10, 12, 14, 16, 18, 20, 22]\n",
+        "Min_ZScore = 1.96\n",
+        "\n",
+        "#@markdown Select \"YES\" to download output matrix upon completion:\n",
+        "DOWNLOAD_MATRIX   = \" NO\"       #@param [\" NO\", \" YES\"]\n"
       ],
       "metadata": {
         "id": "VVg6BO5iwzOz"
@@ -74,11 +76,11 @@
         "import chi_score_analysis as xid\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "from google.colab import files\n"
+        "from google.colab import files\n",
+        "import time\n"
       ],
       "metadata": {
-        "id": "DQDAYLJI0Aoa",
-        "cellView": "form"
+        "id": "DQDAYLJI0Aoa"
       },
       "execution_count": null,
       "outputs": []
@@ -121,22 +123,19 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title <b><font color='#00AAFF'>3 - Plot Solution</b>\n",
+        "#@title <b><font color='#00AAFF'>4 - Plot Solution</b>\n",
         "\n",
-        "#@markdown If you wish to download the plot from this cell, enter pathname to outfile here and re-execute this cell:\n",
-        "OUTFILE = \"\" #@param {type:\"string\"}\n",
+        "OUTFILE = f'{NAME}_{time.time()}.svg'\n",
         "\n",
-        "#@markdown Optionally, the window size used to render the matrix can be adjusted here:\n",
-        "WINDOW = 12 #@param {type:\"string\"}\n",
+        "WINDOW = 12\n",
         "\n",
         "xid.plot_solution(SEQUENCE, xid.get_corr_scores(xid.get_heatmap_scores(SEQUENCE, WINDOW)), solution[0], WINDOW, NAME)\n",
         "\n",
-        "if OUTFILE != \"\":\n",
+        "if DOWNLOAD_MATRIX == \" YES\":\n",
         "  plt.savefig(OUTFILE, bbox_inches = 'tight')\n",
         "  files.download(OUTFILE)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "fP5XJo0n38AN"
       },
       "execution_count": null,
