--- a/ChiScore_Analysis.ipynb
+++ b/ChiScore_Analysis.ipynb
@@ -93,9 +93,13 @@
         "results = xid.analyze_sequence(SEQUENCE, Window_Sizes)\n",
         "\n",
         "c = 0\n",
-        "while np.min(results[c][1]) < Min_ZScore:\n",
-        "  c += 1\n",
-        "solution = results[c]\n",
+        "solution = [[], []]\n",
+        "while c < len(results):\n",
+        "  if np.min(results[c][1]) < Min_ZScore:\n",
+        "    c += 1\n",
+        "  else:\n",
+        "    solution = results[c]\n",
+        "    break\n",
         "\n",
         "for _ in range(5):\n",
         "  print('.....')\n",
@@ -111,11 +115,13 @@
         "  print('.....')\n",
         "\n",
         "print(f'Boundary positions and z-scores are...')\n",
-        "print(solution)"
+        "if solution == [[], []]:\n",
+        "  print('No modules found in input sequence for specified confidence level.')\n",
+        "else:\n",
+        "  print(solution)"
       ],
       "metadata": {
-        "id": "776KE4GE1X4y",
-        "cellView": "form"
+        "id": "776KE4GE1X4y"
       },
       "execution_count": null,
       "outputs": []
